--- a/app/src/main/res/layout/item_video_card.xml
+++ b/app/src/main/res/layout/item_video_card.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
+    android:layout_margin="@dimen/video_card_margin"
     android:clickable="true"
     android:focusable="true"
     android:stateListAnimator="@animator/blbl_focus_scale"
@@ -33,15 +33,15 @@
             android:id="@+id/tv_duration"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:paddingHorizontal="6dp"
-            android:paddingVertical="2dp"
+            android:layout_margin="@dimen/video_card_text_margin"
+            android:paddingHorizontal="@dimen/video_card_duration_padding_h"
+            android:paddingVertical="@dimen/video_card_duration_padding_v"
             android:shadowColor="#CC000000"
             android:shadowDx="0"
             android:shadowDy="1"
             android:shadowRadius="2"
             android:textColor="@color/blbl_text"
-            android:textSize="12sp"
+            android:textSize="@dimen/video_card_duration_text_size"
             app:layout_constraintBottom_toBottomOf="@id/iv_cover"
             app:layout_constraintEnd_toEndOf="@id/iv_cover" />
 
@@ -49,16 +49,17 @@
             android:id="@+id/ll_stats"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:paddingHorizontal="6dp"
-            android:paddingVertical="2dp"
+            android:layout_margin="@dimen/video_card_text_margin"
+            android:paddingHorizontal="@dimen/video_card_duration_padding_h"
+            android:paddingVertical="@dimen/video_card_duration_padding_v"
             android:orientation="horizontal"
             app:layout_constraintBottom_toBottomOf="@id/iv_cover"
             app:layout_constraintStart_toStartOf="@id/iv_cover">
 
             <ImageView
-                android:layout_width="14dp"
-                android:layout_height="14dp"
+                android:id="@+id/iv_stat_play"
+                android:layout_width="@dimen/video_card_stat_icon_size"
+                android:layout_height="@dimen/video_card_stat_icon_size"
                 android:layout_gravity="center_vertical"
                 android:src="@drawable/ic_stat_play"
                 android:contentDescription="@string/app_name" />
@@ -73,11 +74,12 @@
                 android:shadowDy="1"
                 android:shadowRadius="2"
                 android:textColor="@color/blbl_text"
-                android:textSize="12sp" />
+                android:textSize="@dimen/video_card_stat_text_size" />
 
             <ImageView
-                android:layout_width="14dp"
-                android:layout_height="14dp"
+                android:id="@+id/iv_stat_danmaku"
+                android:layout_width="@dimen/video_card_stat_icon_size"
+                android:layout_height="@dimen/video_card_stat_icon_size"
                 android:layout_marginStart="10dp"
                 android:layout_gravity="center_vertical"
                 android:src="@drawable/ic_stat_danmaku"
@@ -93,7 +95,7 @@
                 android:shadowDy="1"
                 android:shadowRadius="2"
                 android:textColor="@color/blbl_text"
-                android:textSize="12sp" />
+                android:textSize="@dimen/video_card_stat_text_size" />
 
         </LinearLayout>
 
@@ -101,12 +103,12 @@
             android:id="@+id/tv_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
+            android:layout_margin="@dimen/video_card_text_margin"
             android:ellipsize="end"
             android:lines="2"
             android:maxLines="2"
             android:textColor="@color/blbl_text"
-            android:textSize="14sp"
+            android:textSize="@dimen/video_card_title_text_size"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/iv_cover" />
@@ -115,8 +117,8 @@
             android:id="@+id/ll_subtitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginHorizontal="@dimen/video_card_text_margin"
+            android:layout_marginBottom="@dimen/video_card_text_margin"
             android:orientation="horizontal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -131,7 +133,7 @@
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:textColor="@color/blbl_text_secondary"
-                android:textSize="12sp" />
+                android:textSize="@dimen/video_card_subtitle_text_size" />
 
             <TextView
                 android:id="@+id/tv_pubdate"
@@ -141,7 +143,7 @@
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:textColor="@color/blbl_text_secondary"
-                android:textSize="12sp" />
+                android:textSize="@dimen/video_card_subtitle_text_size" />
 
         </LinearLayout>
 
