--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="blbl_purple">#8A2BE2</color>
     <color name="blbl_blue">#00A1D6</color>
     <color name="blbl_red">#FF4D4F</color>
+    <color name="blbl_pink">#FB7299</color>
 </resources>
